@@ -169,10 +169,6 @@ which returns the number of the active color for a given pixel.
       <dd>
         Coordinates of the top left corner of the frame (the second corner is calculated from the full size of the image and size of its visible part).
       </dd>
-      <dt><b>ushort    bottom_margin, right_margin;</b></dt>
-      <dd>
-        Width (in pixels) of bottom and right part of masked pixels area.
-      </dd>
       <dt><b>ushort      iheight, iwidth;</b></dt>
       <dd>
         Size of the output image (may differ from height/width for cameras that require image rotation or have non-square pixels). 
@@ -1113,7 +1109,7 @@ data source is recorded. The possible values are listed below.
     <address><a href="mailto:info@libraw.org">LibRaw Team</a></address>
 <!-- Created: Sun Mar 16 14:42:41 MSK 2008 -->
 <!-- hhmts start -->
-Last modified: Mon Jul 11 20:15:44 MSD 2011
+Last modified: Tue Aug  9 19:04:00 MSD 2011
 <!-- hhmts end -->
   </body>
 </html>
