@@ -182,10 +182,6 @@
         Координаты верхнего левого угла рамки (второй угол рассчитывается исходя из полного размера изображения и
         размера видимой части).
       </dd>
-      <dt><b>ushort    bottom_margin, right_margin;</b></dt>
-      <dd>
-        Ширина в пикселах нижней и правой части черной рамки (маскированных пикселов).
-      </dd>
       <dt><b>ushort      iheight, iwidth;</b></dt>
       <dd>
         Размер выходного изображения (может отличаться от height/width для камер, где требуется поворот изображения,
@@ -1149,7 +1145,7 @@ protected:
     <address><a href="mailto:info@libraw.org">LibRaw Team</a></address>
 <!-- Created: Sun Mar 16 14:42:41 MSK 2008 -->
 <!-- hhmts start -->
-Last modified: Mon Jul 11 20:13:41 MSD 2011
+Last modified: Tue Aug  9 19:03:49 MSD 2011
 <!-- hhmts end -->
   </body>
 </html>
