@@ -174,7 +174,7 @@ typedef struct
     double      pixel_aspect;
     int         flip;
 
-    ushort      right_margin,bottom_margin; 
+//    ushort      right_margin,bottom_margin; 
 
 } libraw_image_sizes_t;
 
