@@ -1,5 +1,10 @@
 2011-08-09 Alex Tutubalin <lexa@lexa.ru>
-        * metadata saved to int. storage after identify too.
+
+        * fixed open_file()/adjust_sizes_info_only() code path
+
+        * Removed imgdata.sizes.bottom_margin and right_margin data fields
+
+        * all client code should be recompiled due to internals change.
 
 2011-07-19 Alex Tutubalin <lexa@lexa.ru>
         * New sample samples/postprocessing_benchmark.cpp
